基本实现落子绘制

--- a/FiveStoneAI/FiveStoneAI.vcxproj
+++ b/FiveStoneAI/FiveStoneAI.vcxproj
@@ -30,7 +30,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -188,6 +188,7 @@
   <ItemGroup>
     <ClInclude Include="FiveStoneAI.h" />
     <ClInclude Include="FiveStoneAIDlg.h" />
+    <ClInclude Include="Global.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
